app/javascript/style/video/_header_bar.scss
@use "../utils/color";
@use "../utils/font";
@use "../utils/breakpoints" as *;

#video-show {
  .primary-video__header {
    display: flex;
    height: 3rem;
    background: color.$white;
    font-size: 0.8rem;
    border-radius: 10px 10px 0 0;
    padding-right: 0.2rem;
    padding-left: 0.2rem;
    border-bottom: 1px solid color.$gray-light;

    &__address_bar {
      color: color.$gray-dark;
      flex: 1;
      font-size: 1rem;
      border: 1px solid color.$gray-light;
      min-width: 0;

      #address-input {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        text-overflow-ellipsis: color.$gray-light;
      }

      #not-started-notification {
        background-color: color.$gray-dark;
        color: color.$white;
      }
    }

    > * {
      border-radius: 10px;
      margin: 0.4rem 0.2rem 0.4rem 0.2rem;
      padding: 0 1rem 0 1rem;
      display: flex;
      flex-direction: row;
      align-items: center;
    }

    .widget {
      background: color.$veue-lilac;
      display: flex;
      flex-direction: row;
      align-items: center;
      font-size: 1rem;

      .icon {
        height: 14px;
        margin-right: 0.5rem;
        display: flex;
        svg {
          path {
            fill: color.$veue-corporate;
          }
        }
      }

      #active-viewers {
        color: color.$veue-corporate;
      }

      &.live {
        background: color.$red-highlight;
        color: color.$white;
        font-weight: font.$heavy-weight;
        display: flex;

        & > .widget-live__desktop {
          display: none;
        }

        @include large() {
          & > .widget-live__desktop {
            display: block;
          }

          & > .widget-live__mobile {
            display: none;
          }
        }
      }
    }

    .replay-badge {
      background: color.$neutral-regular;
      color: color.$white;
      font-weight: font.$heavy-weight;
      position: relative;
      z-index: 1;

      &:hover {
        background: color.$neutral-darker;
        .badge-message {
          display: block;
        }
      }

      &__text {
        display: none;
      }

      @include large() {
        &__image {
          display: none;
        }

        &__text {
          display: block;
        }
      }

      .badge-message {
        display: none;
        text-align: center;
        position: absolute;
        left: -50px;
        top: 42px;
        background: color.$neutral-darker;

        @include smallTall() {
          left: -107px;
        }

        &__body {
          position: fixed;
          padding: 0.65rem 1rem;
          border-radius: 10px;
          background-color: color.$neutral-darker;
          max-width: 160px;

          &:before {
            position: absolute;
            border-left: 6px solid transparent;
            border-right: 6px solid transparent;
            border-bottom: 8px solid color.$neutral-darker;
            content: "";
            left: 86px;
            top: -5px;
            @include smallTall() {
              transform: translate(350%, 0);
            }
          }
        }
      }
    }
  }
}

